--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 cache: bundler
 
-script: ./update
+script:
+  - ./update
+  - ./history
 
 before_script:
  - chmod +x ./update
+ - chmod +x ./history
